# digitInfer

./: CMakeLists.txt  NeuralNetworkOpenCL.cpp  README.md  main.cpp  nets.hpp  neural_network_kernels.cl
NeuralNetworkFromScratch/: model.npz  train.py
cnpy/: CMakeCache.txt  Makefile  cmake_install.cmake
